reorganizes bandwidth storage to be /bandwidths/year/week/project/day

--- a/home.haml
+++ b/home.haml
@@ -10,25 +10,18 @@ title: Project
   %a{'ng-click'=>'duplicatePreviousWeek()', class: 'btn'} Duplicate previous week
   %a{'ng-click'=>'clearWeek()', class: 'btn'} Clear
 
-  .row
-    .span10.offset1
-      .row
-        .span2
-          Week of {[bandwidths[0].date.toString('MMMM dd')]}
+  %table.table
+    %tr
+      %th
+        Week of {[beginningOfWeek.toString('MMMM dd')]}
+      %th{'ng-repeat'=>'day in [0,1,2,3,4,5,6]'}
+        {[beginningOfWeek.clone().addDays(day).toString('dddd')]}
+        {[beginningOfWeek.clone().addDays(day).toString('MMM d')]}
+    %tr{'ng-repeat'=>'project in bandwidths'}
+      %td {[project.name]}
+      %td{'ng-repeat'=>'bandwidth in project.days track by $index', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
+        .incrementors{'ng-show'=>'isEditEnabled'}
+          %i.icon-chevron-down{'ng-click'=>'bandwidth = bandwidth - 1'}
+          %i.icon-chevron-up{'ng-click'=>'bandwidth = bandwidth + 1'} 
 
-          .row{'ng-repeat'=>'project in bandwidths[0].projects'}
-            .span2
-              {[project.name]} 
-
-        .span1{'ng-repeat'=>'day in bandwidths'} 
-          .row
-            .span1
-              {[day.date.toString('dddd')]} - 
-              {[day.date.toString('MMMM dd')]}
-          .row{'ng-repeat'=>'project in day.projects'} 
-            .span1{'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
-              .incrementors{'ng-show'=>'isEditEnabled'}
-                %i.icon-chevron-down{'ng-click'=>'project.commitment = project.commitment - 1'}
-                %i.icon-chevron-up{'ng-click'=>'project.commitment = project.commitment + 1'} 
-  
-              {[project.commitment]}
+        {[bandwidth]}
