--- a/_layouts/main.haml
+++ b/_layouts/main.haml
@@ -40,7 +40,9 @@ project_name: 'Daily Bandwidth'
 
 
       #mainContent{'ng-controller'=>'app.MainController'}
-        {{ content }}
+        .row
+          .span10.offset1
+            {{ content }}
       #footer
         .row
           .span11.offset1
