--- a/home.haml
+++ b/home.haml
@@ -10,7 +10,7 @@ title: Project
   %a{'ng-click'=>'duplicatePreviousWeek()', class: 'btn'} Duplicate previous week
   %a{'ng-click'=>'clearWeek()', class: 'btn'} Clear
 
-  %table.table
+  %table.table.bandwidths
     %tr
       %th
         Week of {[beginningOfWeek.toString('MMMM dd')]}
@@ -19,9 +19,8 @@ title: Project
         {[beginningOfWeek.clone().addDays(day).toString('MMM d')]}
     %tr{'ng-repeat'=>'project in bandwidths'}
       %td {[project.name]}
-      %td{'ng-repeat'=>'bandwidth in project.days track by $index', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
+      %td{'ng-repeat'=>'bandwidth in project.days track by $index', 'ng-controller'=>'app.BandwidthContainerController', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
         .incrementors{'ng-show'=>'isEditEnabled'}
           %i.icon-chevron-down{'ng-click'=>'bandwidth = bandwidth - 1'}
           %i.icon-chevron-up{'ng-click'=>'bandwidth = bandwidth + 1'} 
-
         {[bandwidth]}
