--- a/home.haml
+++ b/home.haml
@@ -21,6 +21,6 @@ title: Project
       %td {[project.name]}
       %td{ 'ng-controller'=>'app.BandwidthContainerController', 'ng-repeat'=>'bandwidth in project.days track by $index', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
         .incrementors{'ng-show'=>'isEditEnabled'}
-          %i.icon-chevron-down{'ng-click'=>'bandwidth = bandwidth - 1'}
+          %i.icon-chevron-down{'ng-click'=>'decrement()'}
           %i.icon-chevron-up{'ng-click'=>'bandwidth = bandwidth + 1'} 
         {[bandwidth]}
