--- a/settings.haml
+++ b/settings.haml
@@ -14,11 +14,11 @@ title: Project
         %th{'ng-repeat'=>'(weekday,hours) in settings.defaultBandwidths'}
           {[weekday]}
       %tr
-        %td{'ng-controller'=>'app.EditableBandwidthController', 'ng-repeat'=>'(weekday,hours) in settings.defaultBandwidths', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
+        %td{'ng-controller'=>'app.EditableBandwidthController', 'ng-repeat'=>'weekday in settings.defaultBandwidths', 'ng-mouseenter'=>'isEditEnabled = true', 'ng-mouseleave'=>'isEditEnabled = false'}
           .incrementors{'ng-show'=>'isEditEnabled'}
             %i.icon-chevron-down{'ng-click'=>'decrement()'}
             %i.icon-chevron-up{'ng-click'=>'increment()'} 
-          {[hours]}
+          {[weekday.hours]}
   
     %h3 Manage Projects
     .row{'ng-repeat'=>'project in settings.projects', 'ng-controller'=>'app.EditableProjectController'}
