--- a/_layouts/main.haml
+++ b/_layouts/main.haml
@@ -42,6 +42,10 @@ project_name: 'Daily Bandwidth'
       #mainContent{'ng-controller'=>'app.MainController'}
         .row
           .span10.offset1
+            %div{"ng-controller"=>"app.AlertController"}
+              .alert{"ng-repeat"=>"alert in alerts", :class=>'alert-{[alert.type]}', :type=>"alert.type"}
+                {[alert.msg]}
+                %button{'ng-click'=>"closeAlert($index)", type: "button", class: "close", "data-dismiss"=> "alert"} x
             {{ content }}
       #footer
         .row
